# zeebe-rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  deny.toml
.github/: dependabot.yml
examples/: auto_handler.rs  oauth.rs  run_worker.rs  topology.rs  worker.rs
proto/: gateway.proto
src/: client.rs  error.rs  job.rs  lib.rs  oauth.rs  process.rs  resources.rs  topology.rs  util.rs  workflow.rs
src/worker/: builder.rs  job_dispatcher.rs  job_poller.rs  mod.rs
src/worker/auto_handler/: handler.rs  mod.rs
src/worker/auto_handler/extractor/: data.rs  mod.rs  state.rs
