[package]
name = "zeebe"
version = "0.3.1"
authors = ["Julian Tescher <julian@outtherelabs.com>"]
description = """
A rust client for defining, orchestrating, and monitoring business processes across microservices 
using Zeebe.
"""
homepage = "https://github.com/OutThereLabs/zeebe-rust"
repository = "https://github.com/OutThereLabs/zeebe-rust"
readme = "README.md"
categories = ["asynchronous", "api-bindings"]
keywords = ["zeebe", "job", "queue", "async", "microservices"]
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.3"
prost = "0.7"
serde = "1.0"
serde_json = "1.0"
tonic = { version = "0.4", features = ["tls", "transport"] }
tokio = { version = "1.1", features = ["fs"] }
tokio-stream = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.4"
