[package]
name = "zeebe"
version = "0.5.0"
authors = [
    "Julian Tescher <julian@outtherelabs.com>",
    "Rafał Borysionek <rafal.borysionek@fathom.io>",
]
description = """
Fork of a rust client for defining, orchestrating, and monitoring business processes across microservices 
using Zeebe.
"""
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
futures = "0.3.30"
oauth2 = { version = "4.4.2" }
prost = "0.13.1"
serde = "1.0.204"
serde_json = "1.0.122"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = [
    "fs",
    "time",
], default_features = false }
tokio-stream = "0.1.15"
tonic = { version = "0.12.1", features = ["tls", "tls-roots", "transport"] }
tracing = "0.1.40"
tracing-futures = "0.2.5"

[dev-dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.1"
